# G02-AI-Agent

./: README.md  app.py  main.py  note.md  pyproject.toml  requirements.txt
src/: README.md
src/feature/: README.md  __init__.py  conversation.py  file_upload.py
src/scripts/: DEFAULT.py  README.md  agent.py
src/style/: README.md  style.css  theme.py
src/tools/: README.md  __init__.py  check_date.py  check_user_file.py  docs_retrieve.py  judge_llm.py  web_search.py
src/utils/: README.md  database.py  log.py  markdown_splitter.py  mistral_ocr.py  models.py  txt_converter.py
user_data/txts/: demo.txt
user_data/vectorstore/: index.faiss  index.pkl
