[project]
name = "vnpt-ai-agent-d88238f429052fcfbd8f94a52f4d99d074511340"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate==1.10.1",
    "aiofiles==24.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.15",
    "aiosignal==1.4.0",
    "aiosqlite==0.21.0",
    "annotated-types==0.7.0",
    "antlr4-python3-runtime==4.9.3",
    "anyio==4.10.0",
    "asttokens==3.0.0",
    "attrs==25.3.0",
    "backoff==2.2.1",
    "beautifulsoup4==4.13.5",
    "brotli==1.1.0",
    "cached-property==2.0.1",
    "cachetools==5.5.2",
    "certifi==2025.8.3",
    "cffi==1.17.1",
    "charset-normalizer==3.4.3",
    "click==8.2.1",
    "colorama==0.4.6",
    "coloredlogs==15.0.1",
    "comm==0.2.3",
    "contourpy==1.3.3",
    "cryptography==45.0.7",
    "cycler==0.12.1",
    "dataclasses-json==0.6.7",
    "datasets==4.0.0",
    "debugpy==1.8.16",
    "decorator==5.2.1",
    "deprecated==1.2.18",
    "dill==0.3.8",
    "distro==1.9.0",
    "effdet==0.4.1",
    "emoji==2.14.1",
    "eval-type-backport==0.2.2",
    "executing==2.2.1",
    "faiss-cpu==1.12.0",
    "fastapi==0.116.1",
    "ffmpy==0.6.1",
    "filelock==3.13.1",
    "filetype==1.2.0",
    "flatbuffers==25.2.10",
    "fonttools==4.59.2",
    "frozenlist==1.7.0",
    "fsspec==2024.6.1",
    "google-api-core==2.25.1",
    "google-auth==2.40.3",
    "google-cloud-vision==3.10.2",
    "googleapis-common-protos==1.70.0",
    "gradio==5.42.0",
    "gradio-client==1.11.1",
    "greenlet==3.2.4",
    "groovy==0.1.2",
    "grpcio==1.74.0",
    "grpcio-status==1.74.0",
    "h11==0.16.0",
    "html5lib==1.1",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "httpx-sse==0.4.1",
    "huggingface-hub==0.34.4",
    "humanfriendly==10.0",
    "idna==3.10",
    "invoke==2.2.0",
    "ipykernel==6.30.1",
    "ipython==9.5.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jinja2==3.1.4",
    "jiter==0.10.0",
    "joblib==1.5.2",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jupyter-client==8.6.3",
    "jupyter-core==5.8.1",
    "kiwisolver==1.4.9",
    "langchain==0.3.27",
    "langchain-community==0.3.27",
    "langchain-core==0.3.75",
    "langchain-huggingface==0.3.1",
    "langchain-milvus==0.2.1",
    "langchain-mistralai==0.2.11",
    "langchain-ollama==0.3.7",
    "langchain-openai==0.3.32",
    "langchain-tavily==0.2.11",
    "langchain-text-splitters==0.3.11",
    "langdetect==1.0.9",
    "langgraph==0.6.6",
    "langgraph-checkpoint==2.1.1",
    "langgraph-checkpoint-sqlite==2.0.11",
    "langgraph-prebuilt==0.6.4",
    "langgraph-sdk==0.2.6",
    "langsmith==0.4.25",
    "lxml==6.0.1",
    "markdown-it-py==4.0.0",
    "markupsafe==2.1.5",
    "marshmallow==3.26.1",
    "matplotlib==3.10.6",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "mistralai==1.9.10",
    "ml-dtypes==0.5.3",
    "mpmath==1.3.0",
    "multidict==6.6.4",
    "multiprocess==0.70.16",
    "mypy-extensions==1.1.0",
    "nest-asyncio==1.6.0",
    "networkx==3.3",
    "nltk==3.9.1",
    "numexpr==2.11.0",
    "numpy==2.1.2",
    "olefile==0.47",
    "ollama==0.5.3",
    "omegaconf==2.3.0",
    "onnx==1.19.0",
    "onnxruntime==1.22.1",
    "openai==1.106.1",
    "opencv-python==4.12.0.88",
    "orjson==3.11.3",
    "ormsgpack==1.10.0",
    "packaging==25.0",
    "pandas==2.3.1",
    "parso==0.8.5",
    "pdf2image==1.17.0",
    "pdfminer-six==20250506",
    "pi-heif>=1.1.1",
    "pikepdf==9.10.2",
    "pillow>=11.3.0",
    "platformdirs==4.4.0",
    "portkey-ai==1.14.4",
    "prompt-toolkit==3.0.52",
    "propcache==0.3.2",
    "proto-plus==1.26.1",
    "protobuf==6.32.0",
    "psutil==7.0.0",
    "pure-eval==0.2.3",
    "pyarrow==21.0.0",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pycocotools==2.0.10",
    "pycparser==2.22",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.10.1",
    "pydub==0.25.1",
    "pygments==2.19.2",
    "pymilvus==2.6.1",
    "pyparsing==3.2.3",
    "pypdf==6.0.0",
    "pypdfium2==4.30.0",
    "pyperclip==1.9.0",
    "pyreadline3==3.5.4",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "python-iso639==2025.2.18",
    "python-magic==0.4.27",
    "python-multipart==0.0.20",
    "python-oxmsg==0.0.2",
    "pytz==2025.2",
    "pywin32==311",
    "pyyaml==6.0.2",
    "pyzmq==27.0.2",
    "rapidfuzz==3.14.0",
    "regex==2025.9.1",
    "requests==2.32.5",
    "requests-toolbelt==1.0.0",
    "rich==14.1.0",
    "rsa==4.9.1",
    "ruff==0.12.12",
    "safehttpx==0.1.6",
    "safetensors==0.6.2",
    "scikit-learn==1.7.1",
    "scipy==1.16.1",
    "semantic-version==2.10.0",
    "sentence-transformers==5.1.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.8",
    "sqlalchemy==2.0.43",
    "sqlite-vec==0.1.6",
    "stack-data==0.6.3",
    "starlette==0.47.3",
    "sympy==1.13.3",
    "tenacity==9.1.2",
    "threadpoolctl==3.6.0",
    "tiktoken==0.11.0",
    "timm==1.0.19",
    "tokenizers==0.22.0",
    "tomlkit==0.13.3",
    "tornado==6.5.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "transformers==4.56.1",
    "typer==0.17.4",
    "types-requests==2.32.4.20250809",
    "typing-extensions==4.12.2",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "ujson==5.11.0",
    "unstructured==0.18.14",
    "unstructured-client==0.42.3",
    "unstructured-inference==1.0.5",
    "unstructured-pytesseract==0.3.15",
    "urllib3==2.5.0",
    "uv==0.8.15",
    "uvicorn==0.35.0",
    "wcwidth==0.2.13",
    "webencodings==0.5.1",
    "websockets==15.0.1",
    "wikipedia==1.4.0",
    "wrapt==1.17.3",
    "xxhash==3.5.0",
    "yarl==1.20.1",
    "zstandard==0.24.0",
]
